--- a/app/globals.css
+++ b/app/globals.css
@@ -2,5 +2,22 @@
 
 html,
 body {
-    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+@layer base {
+    body {
+        font-family: var(--font-poppins);
+    }
+}
+
+@layer utilities {
+    .light-aurora-gradient {
+        @apply bg-gradient-to-br from-[#1F4F7A] to-[#2DD4BF];
+    };
+
+    .night-sky-gradient {
+        @apply bg-gradient-to-br from-[#0B1020] to-[#0F1B2D];
+    };
 }
